fix: replace non-supported css rule gap for introduction__buttons

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -20,6 +20,14 @@
       font-size: 12px;
     }
   }
+
+  & + & {
+    margin-left: 15px;
+
+    @include breakpoint('xxs') {
+      margin-left: 10px;
+    }
+  }
 }
 
 .button--white {
