--- a/src/styles/components/_introduction.scss
+++ b/src/styles/components/_introduction.scss
@@ -28,7 +28,6 @@
 
 .introduction__buttons {
   display: flex;
-  gap: $spacing-unit * 3;
 }
 
 .introduction__image {
